# MockoDB

./: .gitignore  README.md
HelloWorld/: README.md
HelloWorld/nix/c++/: CMakeLists.txt  CPPLINT.cfg  HelloWorld.cpp  Helloer.cpp  build_and_run.sh  clean.sh  default.nix  test_test.cpp
HelloWorld/nix/c++/apps/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
HelloWorld/nix/c++/modules/: CMakeLists.txt
HelloWorld/nix/c++/modules/Helloer/: CMakeLists.txt
HelloWorld/nix/c++/modules/Helloer/api/: Helloer.hpp  HelloerFactory.hpp
HelloWorld/nix/c++/modules/Helloer/mock/: MockHelloer.cpp  MockHelloer.hpp  MockHelloerFactory.cpp
HelloWorld/nix/c++/modules/Talker/: CMakeLists.txt
HelloWorld/nix/c++/modules/Talker/api/: TalkerFactory.hpp
HelloWorld/nix/c++/modules/Talker/impl/: TalkerImplFactory.cpp
HelloWorld/nix/c++/modules/Talker/test/: TestTalker.cpp
HelloWorld/nix/c++/modules/helloer/: CMakeLists.txt
HelloWorld/nix/c++/modules/helloer/api/: Helloer.hpp
HelloWorld/nix/c++/modules/helloer/test/: TestHelloer.cpp
HelloWorld/nix/c++/modules/jinja_generated_class/: CMakeLists.txt
HelloWorld/nix/c++/modules/jinja_generated_class/api/: JinjaGeneratedClass.hpp  JinjaGeneratedClassFactory.hpp
HelloWorld/nix/c++/modules/jinja_generated_class/impl/: JinjaGeneratedClassFactory.cpp  JinjaGeneratedClassImpl.cpp  JinjaGeneratedClassImpl.hpp
HelloWorld/nix/c++/modules/jinja_generated_class/mock/: MockJinjaGeneratedClass.hpp  MockJinjaGeneratedClassFactory.cpp
HelloWorld/nix/c++/modules/jinja_generated_class/test/: TestJinjaGeneratedClass.cpp
HelloWorld/nix/c++/modules/talker/: CMakeLists.txt
HelloWorld/nix/c++/modules/talker/api/: Talker.hpp
HelloWorld/nix/c++/modules/talker/impl/: TalkerImpl.cpp  TalkerImpl.hpp
HelloWorld/nix/c++/modules/talker/test/: TestTalker.cpp
HelloWorld/nix/c++/src/: CMakeLists.txt
HelloWorld/nix/c++/src/Helloer/: CMakeLists.txt
HelloWorld/nix/c++/src/Helloer/api/: Helloer.hpp
HelloWorld/nix/c++/src/Helloer/impl/: HelloerImpl.cpp  HelloerImpl.hpp  HelloerImplFactory.cpp
HelloWorld/nix/c++/test/: CMakeLists.txt
jinja/: default.nix  myapp.py
jinja/templates/: CMakeLists.txt  mockmodule.hpp  mockmodulefactory.cpp  module.hpp  modulefactory.hpp  moduleimpl.cpp  moduleimpl.hpp  moduleimplfactory.cpp  testmodule.cpp
